<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".ui.LoginOptionFragment">


    <TextView
            android:textColor="@color/black"
            android:text="@string/ask_me"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title"
            app:layout_constraintVertical_bias=".4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/icon"
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    <TextView
            android:text="@string/got_a_question_ask_me"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:text="@string/sign_up"
            app:layout_constraintVertical_bias=".8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/FlatButton"
            android:layout_margin="@dimen/margin_large"
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:textAllCaps="false"
            android:textColor="@color/light_blue"
            android:text="@string/log_in"
            android:background="@drawable/blue_outline_button"
            android:layout_marginEnd="@dimen/margin_large"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/light_blue"
            android:text="@string/skip_for_now"
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

    />
</android.support.constraint.ConstraintLayout>