<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userlogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.userlogin.UserLoginFragment">


    <android.support.constraint.Guideline
        android:id="@+id/guidelineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@id/guidelineTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/log_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTitle" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/edittext_grey_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/icon" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/edittext_grey_bg"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />


    <Button
        android:id="@+id/loginButton"
        style="@style/FlatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />


    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/forgot_password"
        android:textColor="@color/navy_blue"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <FrameLayout
        android:id="@+id/leftDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/default_margin"
        android:background="#F1F1F1"
        app:layout_constraintBottom_toBottomOf="@id/orTextView"
        app:layout_constraintEnd_toStartOf="@id/orTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orTextView" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPass" />

    <FrameLayout
        android:id="@+id/rightDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="#F1F1F1"
        app:layout_constraintBottom_toBottomOf="@id/orTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/orTextView"
        app:layout_constraintTop_toTopOf="@id/orTextView" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="@dimen/margin_large"
        android:background="@drawable/grey_outline_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orTextView">

        <ImageView
            android:id="@+id/googleImage"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/googleDivider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_margin"
            android:background="#f1f1f1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/googleImage"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/googleSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/log_in_with_google"
            android:textAllCaps="false"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/googleDivider"
            app:layout_constraintStart_toStartOf="@id/googleDivider"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/signUpPlaceHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/need_a_askme_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/create_an_account"
        android:textColor="@color/navy_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUpPlaceHolder" />
</android.support.constraint.ConstraintLayout>
