<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.usersignup.UserSignUpFragment">


    <android.support.constraint.Guideline
            android:id="@+id/guidelineTitle"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <ImageView
            android:id="@+id/icon"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toTopOf="@id/guidelineTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="50dp" android:layout_height="50dp"/>
    <TextView
            android:visibility="gone"
            android:id="@+id/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/let_s_create_your_account"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <EditText
            android:hint="@string/full_name"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:textColor="@color/black"
            android:background="@drawable/edittext_grey_bg"
            android:inputType="textPersonName"
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <EditText
            android:hint="@string/email_address"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@drawable/edittext_grey_bg"
            android:inputType="textEmailAddress"
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <EditText
            android:hint="@string/enter_password"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            android:textColor="@color/black"
            android:background="@drawable/edittext_grey_bg"
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <Button
            android:text="@string/sign_up"
            style="@style/FlatButton"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/signUpButton"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:indeterminateTint="#00BFFF"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
</android.support.constraint.ConstraintLayout>